<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="qualityViewModel"
            type="com.example.sleeptracker.sleepquality.QualityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sleeptracker.Tracker">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/how_was_your_sleep"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/zero_image"
            android:layout_width="@dimen/image_dimen"
            android:layout_height="@dimen/image_dimen"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/zero_image"
            android:onClick="@{() -> qualityViewModel.ratingsSelected(0)}"
            app:layout_constraintEnd_toStartOf="@+id/one_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_sleep_0" />

        <ImageView
            android:id="@+id/one_image"
            android:layout_width="@dimen/image_dimen"
            android:layout_height="@dimen/image_dimen"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/one_image"
            android:onClick="@{() -> qualityViewModel.ratingsSelected(1)}"
            app:layout_constraintEnd_toStartOf="@+id/two_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/zero_image"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_sleep_1" />

        <ImageView
            android:id="@+id/two_image"
            android:layout_width="@dimen/image_dimen"
            android:layout_height="@dimen/image_dimen"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/two_image"
            android:onClick="@{() -> qualityViewModel.ratingsSelected(2)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/one_image"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_sleep_2" />

        <ImageView
            android:id="@+id/four_image"
            android:layout_width="@dimen/image_dimen"
            android:layout_height="@dimen/image_dimen"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/four_image"
            android:onClick="@{() -> qualityViewModel.ratingsSelected(4)}"
            app:layout_constraintEnd_toStartOf="@+id/five_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/three_image"
            app:layout_constraintTop_toBottomOf="@+id/one_image"
            app:srcCompat="@drawable/ic_sleep_4" />

        <ImageView
            android:id="@+id/three_image"
            android:layout_width="@dimen/image_dimen"
            android:layout_height="@dimen/image_dimen"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/three_image"
            android:onClick="@{() -> qualityViewModel.ratingsSelected(3)}"
            app:layout_constraintEnd_toStartOf="@+id/four_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zero_image"
            app:srcCompat="@drawable/ic_sleep_3" />

        <ImageView
            android:id="@+id/five_image"
            android:layout_width="@dimen/image_dimen"
            android:layout_height="@dimen/image_dimen"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/five_image"
            android:onClick="@{() -> qualityViewModel.ratingsSelected(5)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/four_image"
            app:layout_constraintTop_toBottomOf="@+id/two_image"
            app:srcCompat="@drawable/ic_sleep_5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>